--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cat-eye",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "make react-redux easy",
   "keywords": [
     "react-redux",
@@ -17,10 +17,11 @@
     "build": "babel --plugins transform-object-assign ./src --presets babel-preset-es2015,babel-preset-stage-0,babel-preset-react --out-dir ./lib"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
-    "zero-immutable": "^0.1.1",
-    "axios": "^0.16.2"
+    "rr4i": "^0.1.0",
+    "zero-immutable": "^0.1.1"
   },
   "peerDependencies": {
     "react": "^0.14.9",
