--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cat-eye",
-  "version": "0.1.8",
+  "version": "0.1.9",
   "description": "make react-redux easy",
   "keywords": [
     "react-redux",
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "decode-uri-component": "^0.2.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "rr4i": "^0.1.2",
