--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
   },
   "main": "lib/index.js",
   "scripts": {
-    "build": "babel --plugins transform-object-assign ./src --presets babel-preset-es2015,babel-preset-stage-0,babel-preset-react --out-dir ./lib"
+    "build": "babel ./src --out-dir ./lib"
   },
   "dependencies": {
     "axios": "^0.16.2",
     "decode-uri-component": "^0.2.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
-    "rr4i": "^0.1.3",
+    "rr4i": "^0.1.4",
     "zero-immutable": "^0.1.1"
   },
   "peerDependencies": {
@@ -32,6 +32,7 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^6.4.1",
+    "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-transform-object-assign": "^6.22.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
