--- a/package.json
+++ b/package.json
@@ -1,13 +1,8 @@
 {
   "name": "cat-eye",
-  "version": "0.2.5",
+  "version": "0.3.0",
   "description": "make react-redux easy",
-  "keywords": [
-    "react-redux",
-    "model",
-    "mirror",
-    "mirrorx"
-  ],
+  "keywords": ["react-redux", "model", "mirror", "mirrorx"],
   "author": {
     "email": "caolvchong@gmail.com",
     "name": "洪军钊"
