--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "name": "cat-eye",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "description": "make react-redux easy",
-  "keywords": ["react-redux", "model", "mirror", "mirrorx"],
+  "keywords": [
+    "react-redux",
+    "model",
+    "mirror",
+    "mirrorx"
+  ],
   "author": {
     "email": "caolvchong@gmail.com",
     "name": "洪军钊"
