--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cat-eye",
-  "version": "2.2.2",
+  "version": "2.2.3",
   "description": "make react-redux easy",
   "keywords": [
     "react-redux",
@@ -17,13 +17,17 @@
     "build": "babel ./src --out-dir ./lib",
     "lint": "eslint --ext .js src"
   },
+  "files": [
+    "lib"
+  ],
   "dependencies": {
     "axios": "^0.16.2",
     "decode-uri-component": "^0.2.0",
+    "gem-mine-qs": "^0.1.3",
     "path-to-regexp": "^2.1.0",
     "react-redux": "^5.0.6",
-    "rr4i": "next",
     "redux": "^3.7.2",
+    "rr4i": "next",
     "zero-immutable": "^0.1.1"
   },
   "peerDependencies": {
