--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "cat-eye",
-  "version": "2.2.4",
+  "version": "2.2.5",
   "description": "make react-redux easy",
   "keywords": [
     "react-redux",
     "model",
-    "mirror",
-    "mirrorx"
+    "mirror"
   ],
   "author": {
     "email": "caolvchong@gmail.com",
@@ -15,7 +14,8 @@
   "main": "lib/index.js",
   "scripts": {
     "build": "babel ./src --out-dir ./lib",
-    "lint": "eslint --ext .js src"
+    "lint": "eslint --ext .js src",
+    "prepublish": "npm run build"
   },
   "files": [
     "lib"
